test/sema/if.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
fn foo(): unit {}

fn bar(): bool { return true; }

fn main(): unit {
    // CHECK: [[# @LINE + 1 ]]:11: error: expected 'bool' in condition
    if foo() {}

    if bar() {}
    
    // CHECK: [[# @LINE + 1 ]]:16: error: expected 'bool' in condition
    else if foo() {}
}
